--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,59 +1,79 @@
 # 2024-03-12
 
-共 182 条
+共 201 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 12:00:35 GMT+0800 (China Standard Time) -->
-1. [天蚕土豆码完三千字网友不让吃饭](https://so.toutiao.com/search?keyword=天蚕土豆码完三千字网友不让吃饭)
+<!-- 最后更新时间 Tue Mar 12 2024 13:00:54 GMT+0800 (China Standard Time) -->
+1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
 1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
 1. [各地春耕春管“科技范”满满](https://so.toutiao.com/search?keyword=各地春耕春管“科技范”满满)
-1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
-1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
-1. [列车上两女子因孩子哭闹起争执](https://so.toutiao.com/search?keyword=列车上两女子因孩子哭闹起争执)
 1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [长城汽车员工大批离职](https://so.toutiao.com/search?keyword=长城汽车员工大批离职)
-1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
-1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
-1. [物业为阻止业主装吊窗引冲突](https://so.toutiao.com/search?keyword=物业为阻止业主装吊窗引冲突)
-1. [广西一小学生被教师扇打拖拽](https://so.toutiao.com/search?keyword=广西一小学生被教师扇打拖拽)
-1. [男子露营被小孩哥当成乞丐](https://so.toutiao.com/search?keyword=男子露营被小孩哥当成乞丐)
-1. [湖南一面包车与半挂车碰撞致4死1伤](https://so.toutiao.com/search?keyword=湖南一面包车与半挂车碰撞致4死1伤)
-1. [小米集团涨超5%](https://so.toutiao.com/search?keyword=小米集团涨超5%)
-1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
-1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
+1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
 1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
-1. [韩寒书中真的有黄金](https://so.toutiao.com/search?keyword=韩寒书中真的有黄金)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
 1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
-1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
-1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
-1. [印度成功试射“烈火-5”型导弹](https://so.toutiao.com/search?keyword=印度成功试射“烈火-5”型导弹)
-1. [王楚然双开门大衣](https://so.toutiao.com/search?keyword=王楚然双开门大衣)
+1. [男子露营被小孩哥当成乞丐](https://so.toutiao.com/search?keyword=男子露营被小孩哥当成乞丐)
+1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
+1. [小学生被扇打拖拽 涉事教师停课](https://so.toutiao.com/search?keyword=小学生被扇打拖拽+涉事教师停课)
+1. [TJD谈隔扣文班](https://so.toutiao.com/search?keyword=TJD谈隔扣文班)
+1. [物业为阻止业主装吊窗引冲突](https://so.toutiao.com/search?keyword=物业为阻止业主装吊窗引冲突)
+1. [湖南一面包车与半挂车碰撞致4死1伤](https://so.toutiao.com/search?keyword=湖南一面包车与半挂车碰撞致4死1伤)
+1. [木卫二日产氧量足够百万人活一天](https://so.toutiao.com/search?keyword=木卫二日产氧量足够百万人活一天)
+1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
+1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
+1. [揭波音安全问题的前员工被发现死亡](https://so.toutiao.com/search?keyword=揭波音安全问题的前员工被发现死亡)
+1. [《向往的生活》小羊小不点去世](https://so.toutiao.com/search?keyword=《向往的生活》小羊小不点去世)
+1. [杨紫琼祝贺石头姐拿奖](https://so.toutiao.com/search?keyword=杨紫琼祝贺石头姐拿奖)
+1. [汽车应触屏化还是保留物理按键](https://so.toutiao.com/search?keyword=汽车应触屏化还是保留物理按键)
+1. [媒体：福岛从日本鬼城变成世界伤口](https://so.toutiao.com/search?keyword=媒体：福岛从日本鬼城变成世界伤口)
+1. [媒体：点读机女孩不应“延迟发布”](https://so.toutiao.com/search?keyword=媒体：点读机女孩不应“延迟发布”)
+1. [列车上两女子因孩子哭闹起争执](https://so.toutiao.com/search?keyword=列车上两女子因孩子哭闹起争执)
+1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
 1. [江西：新生儿连续3年免费参加医保](https://so.toutiao.com/search?keyword=江西：新生儿连续3年免费参加医保)
+1. [媒体：最无悬念的一届奥斯卡](https://so.toutiao.com/search?keyword=媒体：最无悬念的一届奥斯卡)
+1. [山东一公司涉嫌非法吸收公众存款](https://so.toutiao.com/search?keyword=山东一公司涉嫌非法吸收公众存款)
+1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
+1. [韩寒书中真的有黄金](https://so.toutiao.com/search?keyword=韩寒书中真的有黄金)
+1. [一对夫妇做短剧每月进账4亿多](https://so.toutiao.com/search?keyword=一对夫妇做短剧每月进账4亿多)
 1. [三腿白狐已安置进动物园](https://so.toutiao.com/search?keyword=三腿白狐已安置进动物园)
+1. [王楚然双开门大衣](https://so.toutiao.com/search?keyword=王楚然双开门大衣)
+1. [河南一司法鉴定中心被举报造假](https://so.toutiao.com/search?keyword=河南一司法鉴定中心被举报造假)
+1. [拜登回答问题前“先请示”逗笑观众](https://so.toutiao.com/search?keyword=拜登回答问题前“先请示”逗笑观众)
+1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
+1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
+1. [边防新兵踏上冰川巡逻路](https://so.toutiao.com/search?keyword=边防新兵踏上冰川巡逻路)
+1. [阿根廷央行将基准利率下调至80%](https://so.toutiao.com/search?keyword=阿根廷央行将基准利率下调至80%)
+1. [英伟达CEO回应常年穿皮衣](https://so.toutiao.com/search?keyword=英伟达CEO回应常年穿皮衣)
+1. [大V：说回本就离开股市的人离场没](https://so.toutiao.com/search?keyword=大V：说回本就离开股市的人离场没)
+1. [李东生：企业敢于投资未来才有未来](https://so.toutiao.com/search?keyword=李东生：企业敢于投资未来才有未来)
+1. [孙兴慜效力热刺9年成队史第5射手](https://so.toutiao.com/search?keyword=孙兴慜效力热刺9年成队史第5射手)
+1. [韩国公民在俄远东从事侦察活动被捕](https://so.toutiao.com/search?keyword=韩国公民在俄远东从事侦察活动被捕)
+1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
+1. [新疆高院原副院长蒋新华被查](https://so.toutiao.com/search?keyword=新疆高院原副院长蒋新华被查)
+1. [巴黎世家胶带手镯好看吗](https://so.toutiao.com/search?keyword=巴黎世家胶带手镯好看吗)
+1. [好莱坞大片没以前那么火爆了？](https://so.toutiao.com/search?keyword=好莱坞大片没以前那么火爆了？)
+1. [沪深京三市半日成交额7378亿元](https://so.toutiao.com/search?keyword=沪深京三市半日成交额7378亿元)
+1. [天蚕土豆码完三千字网友不让吃饭](https://so.toutiao.com/search?keyword=天蚕土豆码完三千字网友不让吃饭)
+1. [长城汽车员工大批离职](https://so.toutiao.com/search?keyword=长城汽车员工大批离职)
+1. [广西一小学生被教师扇打拖拽](https://so.toutiao.com/search?keyword=广西一小学生被教师扇打拖拽)
+1. [小米集团涨超5%](https://so.toutiao.com/search?keyword=小米集团涨超5%)
+1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
+1. [印度成功试射“烈火-5”型导弹](https://so.toutiao.com/search?keyword=印度成功试射“烈火-5”型导弹)
 1. [中伊俄三国海军举行联合演习](https://so.toutiao.com/search?keyword=中伊俄三国海军举行联合演习)
 1. [特朗普暗示若再当选不会打击比特币](https://so.toutiao.com/search?keyword=特朗普暗示若再当选不会打击比特币)
-1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
-1. [英伟达CEO回应常年穿皮衣](https://so.toutiao.com/search?keyword=英伟达CEO回应常年穿皮衣)
 1. [媒体：完善基础制度护航房地产发展](https://so.toutiao.com/search?keyword=媒体：完善基础制度护航房地产发展)
 1. [景区回应女子跪在开封府大堂嚎哭](https://so.toutiao.com/search?keyword=景区回应女子跪在开封府大堂嚎哭)
-1. [一对夫妇做短剧每月进账4亿多](https://so.toutiao.com/search?keyword=一对夫妇做短剧每月进账4亿多)
-1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
-1. [巴黎世家胶带手镯好看吗](https://so.toutiao.com/search?keyword=巴黎世家胶带手镯好看吗)
 1. [俄方回应波兰外长涉北约言论](https://so.toutiao.com/search?keyword=俄方回应波兰外长涉北约言论)
-1. [汽车应触屏化还是保留物理按键](https://so.toutiao.com/search?keyword=汽车应触屏化还是保留物理按键)
-1. [阿根廷央行将基准利率下调至80%](https://so.toutiao.com/search?keyword=阿根廷央行将基准利率下调至80%)
 1. [比亚迪秦L无伪谍照曝光](https://so.toutiao.com/search?keyword=比亚迪秦L无伪谍照曝光)
 1. [汤普森21分 勇士轻取马刺](https://so.toutiao.com/search?keyword=汤普森21分+勇士轻取马刺)
 1. [劳荣枝案受害人小木匠女儿发声](https://so.toutiao.com/search?keyword=劳荣枝案受害人小木匠女儿发声)
 1. [房东嫌租客没打扫卫生扣全部押金](https://so.toutiao.com/search?keyword=房东嫌租客没打扫卫生扣全部押金)
 1. [卡桑旅狙击手狙杀以色列士兵](https://so.toutiao.com/search?keyword=卡桑旅狙击手狙杀以色列士兵)
-1. [木卫二日产氧量足够百万人活一天](https://so.toutiao.com/search?keyword=木卫二日产氧量足够百万人活一天)
 1. [韩官方将与首尔大学医学院教授对话](https://so.toutiao.com/search?keyword=韩官方将与首尔大学医学院教授对话)
 1. [ST鸿达ST贵人等6只个股今日停牌](https://so.toutiao.com/search?keyword=ST鸿达ST贵人等6只个股今日停牌)
 1. [正部级老虎被当典型通报](https://so.toutiao.com/search?keyword=正部级老虎被当典型通报)
 1. [复旦大学对校外人士开放食堂](https://so.toutiao.com/search?keyword=复旦大学对校外人士开放食堂)
-1. [媒体：福岛从日本鬼城变成世界伤口](https://so.toutiao.com/search?keyword=媒体：福岛从日本鬼城变成世界伤口)
 1. [男子生日骑车25公里与李白对酌](https://so.toutiao.com/search?keyword=男子生日骑车25公里与李白对酌)
 1. [男子新买的奥迪A4方向盘一转就响](https://so.toutiao.com/search?keyword=男子新买的奥迪A4方向盘一转就响)
 1. [广州闹市区车祸致11人受伤](https://so.toutiao.com/search?keyword=广州闹市区车祸致11人受伤)
@@ -67,7 +87,6 @@
 1. [英超：切尔西3-2纽卡4轮不败](https://so.toutiao.com/search?keyword=英超：切尔西3-2纽卡4轮不败)
 1. [凯特王妃就P图道歉](https://so.toutiao.com/search?keyword=凯特王妃就P图道歉)
 1. [特朗普能否重返白宫](https://so.toutiao.com/search?keyword=特朗普能否重返白宫)
-1. [新疆高院原副院长蒋新华被查](https://so.toutiao.com/search?keyword=新疆高院原副院长蒋新华被查)
 1. [五菱扬光正式上市 售7.18万元起](https://so.toutiao.com/search?keyword=五菱扬光正式上市+售7.18万元起)
 1. [港媒：大陆对台政策方向脉络清晰](https://so.toutiao.com/search?keyword=港媒：大陆对台政策方向脉络清晰)
 1. [河南方城三腿白狐已安置进动物园](https://so.toutiao.com/search?keyword=河南方城三腿白狐已安置进动物园)
